# pystk

./: .buildinfo  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CNAME  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.md  README.rst  SECURITY.md  bug_test.py  index.html  main.py  outline.md  outline_itt.md  pyproject.toml  robots.txt  sitemap.xml  table.py  tablerender.py  tox.ini  versions.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml  labels.yml
.github/workflows/: ci_cd.yml  ci_cd_main.yml  ci_cd_night.yml  ci_cd_pr.yml  ci_cd_release.yml  label.yml  nighly-build.yml  nightly-build.yml
data_analysis/graphs/: coverage_definition_graphs.py  facility_graphs.py  graph_functions.py
doc/: .vale.ini  Makefile  make.bat
doc/python-api-reference-guide/: pythonGettingStarted.rst  pythonIntro.rst  pythonMigrationGuide.rst
doc/source/: PythonProgrammingGuide.rst  api.rst  artifacts.rst  changelog.rst  conf.py  contribute.rst  contributing.rst  examples.rst  getting-started.rst  index.rst  links.rst  migrate.rst  pythonWhatIsIncluded.rst  pythonWhatsNew.rst  user-guide.rst
doc/source/_autoapi_templates/: index.rst
doc/source/api/: index.rst
doc/source/changelog/: 350.maintenance.md  648.added.md  685.maintenance.md  686.dependencies.md  689.added.md  691.dependencies.md  692.added.md  695.fixed.md  696.dependencies.md  698.fixed.md  701.maintenance.md  703.fixed.md  704.maintenance.md  705.fixed.md  709.fixed.md  710.dependencies.md  711.fixed.md  714.added.md  715.added.md  716.dependencies.md  717.dependencies.md  718.dependencies.md  719.fixed.md  720.dependencies.md  722.dependencies.md  723.miscellaneous.md  724.fixed.md  725.dependencies.md  726.dependencies.md  727.fixed.md  728.fixed.md  729.added.md  730.fixed.md  731.fixed.md  732.maintenance.md  733.maintenance.md  734.fixed.md  735.fixed.md  736.fixed.md  738.maintenance.md  (+45 more)
doc/source/contribute/: developer.rst  documentarian.rst  user.rst
doc/source/contributing/: developer.rst  documentarian.rst  user.rst
doc/source/examples/: index.rst
doc/source/getting-started/: about.rst  building-stk-images.rst  code-snippets.rst  index.rst  install.rst  prerequisites.rst
doc/source/getting_started/: building_stk_images.rst  index.rst  installing_pystk.rst
doc/source/user-guide/: api-structure.rst  code-snippets.rst  create-load-scenarios.rst  create-loading-scenarios.rst  data-analysis.rst  data-types.rst  events.rst  exceptions.rst  help-with-pystk.rst  initialization.rst  migration.rst  results-graphs.rst
doc/source/user_guide/: index.rst
doc/styles/: .gitignore
doc/styles/Custom/: Heading.yml  HeadingCapitalization.yml
docker/linux/: docker-compose.yml
docker/linux/centos/: docker-compose.yml
docker/linux/stk-engine-py310/: Dockerfile  docker-compose.yml
docker/linux/stk-engine-py311/: Dockerfile  docker-compose.yml
docker/linux/stk-engine-py38/: Dockerfile  docker-compose.yml
docker/ubuntu/: docker-compose.yml
docker/windows/: docker-compose.yml
examples/: .ruff.toml  .vale.ini  Untitled.ipynb  aircraft-carrier-landing.py  aviator-carrier-landing.py  aviator-fuel-calculator.py  bielliptic-transfer.py  communication-link-calculator.py  create-load-scenarios.py  facility-to-satellite-access.py  hohmann-transfer.py  index.rst  lambert-transfer.py  multifunction-radar-design.py  multifunction-radar-parametric-study.py  porkchop-plot.py  porkchop-plots-ai.py  porkchop-plots.py  radar-cross-section-detection.py  results-graphs.py  satellite-coverage-analysis.py  satellite-coverage-calculator.py  sensor-access.py  solar_panel_tool.py  stk_tutorial.py  stk_vgt_tutorial.py
examples/stk_desktop/: Aviator_ObjectModel_CarrierLanding.py  Aviator_ObjectModel_FuelConsumptionStudy.py  HohmannTransferUsingTargeter.py  STKProTutorial.py
examples/stk_engine/: SolarPanelTool.py  aviator-carrier-landing.py  aviator-fuel-calculator.py  bielliptic-transfer.py  coverage-around-place.py  facility-to-satellite-access.py  hohmann-transfer.py  hohmann_transfer_using_targeter.py  horizons_results.csv  horizons_results.txt  intro-to-radar.py  lambert-transfer.py  loading-ephem-from-jpl-horizons.py  oumuamua.e  satellite-coverage-analysis.py  satellite-coverage-calculator.py  sensor-access.py  solar_panel_tool.py  stk-object-model-tutorial.py  stk_tutorial.py  stk_vgt_tutorial.py  using-stk-coverage.py
examples/styles/: .gitignore
extensions/: README.rst  pyproject.toml
extensions/src/ansys/stk/extensions/: __init__.py  data_provider_extension.py  plotting.py  scenario_construction.py
extensions/src/ansys/stk/extensions/data_analysis/: __init__.py
extensions/src/ansys/stk/extensions/data_analysis/graphs/: __init__.py  access_graphs.py  graph_helpers.py
requirements/: requirements_build.txt  requirements_doc.txt  requirements_tests.txt
scripts/: autoapi.py  python_snippets_updater.py
tests/: README.md  test_metadata.py
tests/api_migration_assistant_tests/: runner.py  test_cli.py  test_merging_mappings_recordings.py  test_renaming_constructors.py  test_renaming_enumerations.py  test_renaming_imports.py  test_renaming_methods.py  test_renaming_named_arguments.py  test_renaming_properties.py  test_renaming_type_hints.py
tests/doc_snippets_tests/: app_provider.py  code_snippet_decorator.py  code_snippets_test_base.py  conftest.py  template_snippets.py  test_util.py
tests/extensions/: conftest.py  stk_environment.py  test_construct_scenario_from_dict.py  test_data_provider_extension.py  test_version.py
tools/api_migration_tool/: .gitignore  lerna.json  package-lock.json  package.json
version/: index.html
version/0.1/: api.html  artifacts.html  changelog.html  contribute.html  examples.html  index.html
version/dev/: api.html  artifacts.html  changelog.html  contribute.html  examples.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  user-guide.html
version/stable/: genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  user-guide.html
(+18463 files in other folders)
