[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-stk-core"
dynamic = ["version"]
description = "A Python API for STK"
readme = "README.rst"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
]

classifiers = [
    # TODO: remove all 'Private' classifiers prior to the public release
    "Private :: Do Not Upload",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.optional-dependencies]
tests = [
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "pytz==2024.1",
    "parameterized==0.9.0",
]
doc = [
    "ansys-sphinx-theme==0.15.2",
    "enum-tools[sphinx]==0.12.0",
    "jupyterlab==4.1.7",
    "jupytext==1.16.1",
    "jupyter-server==2.14.0",
    "myst-parser==3.0.0",
    "nbsphinx==0.9.3",
    "numpydoc==1.7.0",
    "nbconvert==7.16.3",
    "sphinx==7.3.7",
    "sphinx-design==0.5.0",
    "sphinx-jinja==2.0.2",
    "sphinx-copybutton==0.5.2",
]
visualization = [
    "numpy==1.26.4",
    "jupyter-rfb==0.4.2",
    "Pillow==10.3.0",
    "simplejpeg==1.7.2",
    "sidecar==0.7.0"
]

[tool.flit.module]
name = "ansys.stk.core"

[project.urls]
Homepage = "https://www.ansys.com/products/missions/ansys-stk"
Documentation = "https://stk.docs.pyansys.com/"
Source = "https://github.com/pyansys/pystk"
Tracker = "https://github.com/pyansys/pystk/issues"

[tool.ruff]
line-length = 120
extend-exclude = [
    "src/ansys/stk/core/internal/*.py",
    "tests/**/*.py",
    "examples/**/*.py"
]

[tool.ruff.lint]
select = [
#    "E",    # pycodestyle, see https://beta.ruff.rs/docs/rules/#pycodestyle-e-w
    "D",    # pydocstyle, see https://beta.ruff.rs/docs/rules/#pydocstyle-d
#    "F",    # pyflakes, see https://beta.ruff.rs/docs/rules/#pyflakes-f
#    "I",    # isort, see https://beta.ruff.rs/docs/rules/#isort-i
#    "N",    # pep8-naming, see https://beta.ruff.rs/docs/rules/#pep8-naming-n
#    "PTH",  # flake8-use-pathlib, https://beta.ruff.rs/docs/rules/#flake8-use-pathlib-pth
]
ignore = [
#    "E501",  # Line too long. Ignoring this so "ruff.formatter" manages line length.
    "D212", # Multi-line docstring summary should start at the first line
]

[tool.ruff.lint.pydocstyle]
# Settings: https://docs.astral.sh/ruff/settings/#lintpydocstyle
convention = "google"

# [tool.ruff.format]
# quote-style = "double"
# indent-style = "tab"

# [tool.ruff.isort]
# combine-as-imports = true
# force-sort-within-sections = true
# known-first-party = ["ansys"]

# TODO: the following configuration has no effect, see issue
# https://github.com/codespell-project/codespell/issues/2375
# At the moment, all codespell configuration is done in the pre-commit file.
# Run: `pre-commit run codespell --all-files --show-diff-on-failure` to recreate
# the conditions under which codespell runs during CI/CD.
# [tool.codespell]
# skip = './src/ansys/stk/core/internal,./tests,./doc/_build,./doc/styles'
# ignore-words = "./doc/styles/config/vocabularies/ANSYS/accept.txt"

[tool.coverage.run]
relative_files = true

[tool.coverage.paths]
source = [
    "src",
    "ansys/stk",
]

[tool.coverage.report]
show_missing = true
