[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-stk-core"
dynamic = ["version"]
description = "A Python API for STK"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
]

classifiers = [
    # TODO: remove all 'Private' classifiers prior to the public release
    "Private :: Do Not Upload",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.optional-dependencies]
tests = [
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "pytz==2024.1",
    "parameterized==0.9.0",
    "pandas==2.2.2",
    "numpy==2.0.1"
]
doc = [
    "ansys-sphinx-theme==1.0.3",
    "build==1.2.1",
    "jupyterlab==4.2.4",
    "jupytext==1.16.4",
    "jupyter-server==2.14.2",
    "myst-parser==4.0.0",
    "nbsphinx==0.9.4",
    "numpydoc==1.8.0",
    "nbconvert==7.16.4",
    "sphinx==7.4.7",
    "sphinx-design==0.6.1",
    "sphinx-jinja==2.0.2",
    "sphinx-copybutton==0.5.2",
    "pandas==2.2.2",
    "matplotlib==3.9.1.post1"
]
visualization = [
    "jupyter-rfb==0.4.4",
    "numpy==2.0.1",
    "Pillow==10.4.0",
    "simplejpeg==1.7.4",
    "sidecar==0.7.0"
]
vulnerabilities = [
    "bandit==1.7.9",
    "safety==3.2.4",
]

[tool.flit.module]
name = "ansys.stk.core"

[project.urls]
Homepage = "https://www.ansys.com/products/missions/ansys-stk"
Documentation = "https://stk.docs.pyansys.com/"
Source = "https://github.com/pyansys/pystk"
Tracker = "https://github.com/pyansys/pystk/issues"

[tool.ruff]
line-length = 120
extend-exclude = [
    "src/ansys/stk/core/internal/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
select = [
#    "E",    # pycodestyle, see https://beta.ruff.rs/docs/rules/#pycodestyle-e-w
    "D",     # pydocstyle, see https://beta.ruff.rs/docs/rules/#pydocstyle-d
#    "F",    # pyflakes, see https://beta.ruff.rs/docs/rules/#pyflakes-f
#    "I",    # isort, see https://beta.ruff.rs/docs/rules/#isort-i
#    "N",    # pep8-naming, see https://beta.ruff.rs/docs/rules/#pep8-naming-n
#    "PTH",  # flake8-use-pathlib, https://beta.ruff.rs/docs/rules/#flake8-use-pathlib-pth
    "TD",    # flake8-todos, https://docs.astral.sh/ruff/rules/#flake8-todos-td
]
ignore = [
#   "E501",  # Line too long. Ignoring this so "ruff.formatter" manages line length.
    "D204",  # One blank line required after class docstring
    "D212",  # Multi-line docstring summary should start at the first line
    "D400",  # First line should end with a period
    "TD002", # Missing author in TODOs comment
]

[tool.ruff.lint.pydocstyle]
# Settings: https://docs.astral.sh/ruff/settings/#lintpydocstyle
convention = "numpy"

# [tool.ruff.format]
# quote-style = "double"
# indent-style = "tab"

# [tool.ruff.isort]
# combine-as-imports = true
# force-sort-within-sections = true
# known-first-party = ["ansys"]

# TODO: the following configuration has no effect, see issue
# https://github.com/codespell-project/codespell/issues/2375
# At the moment, all codespell configuration is done in the pre-commit file.
# Run: `pre-commit run codespell --all-files --show-diff-on-failure` to recreate
# the conditions under which codespell runs during CI/CD.
# [tool.codespell]
# skip = './src/ansys/stk/core/internal,./tests,./doc/_build,./doc/styles'
# ignore-words = "./doc/styles/config/vocabularies/ANSYS/accept.txt"

[tool.coverage.run]
relative_files = true

[tool.coverage.paths]
source = [
    "src",
    "ansys/stk",
]

[tool.coverage.report]
show_missing = true
