[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-stk-core"
dynamic = ["version"]
description = "The next generation Python API for STK."
readme = "README.rst"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
]

[project.scripts]
pystk-migration-assistant = "ansys.stk.core.tools.api_migration_assistant.api_migration_assistant:main"

[project.optional-dependencies]
# TODO: split between dependency groups and installation targets with the release of pip v25.1
# https://github.com/pypa/pip/milestone/78
all = [
    "grpcio>=1.71.0",
    "protobuf>=6.30.2",
    "jupyter-rfb>=0.5.1",
    "numpy>=2.2.5",
    "Pillow>=11.2.1",
    "simplejpeg>=1.8.2",
    "sidecar>=0.7.0",
    "libcst>=1.7.0"
]
grpc = [
    "grpcio>=1.71.0",
    "protobuf>=6.30.2",
]
jupyter = [
    "jupyter-rfb>=0.5.1",
    "numpy>=2.2.4",
    "Pillow>=11.1.0",
    "simplejpeg>=1.8.2",
    "sidecar>=0.7.0",
]
tests = [
    "libcst==1.8.0",
    "matplotlib==3.10.3",
    "numpy==2.2.6",
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "pytz==2025.2",
    "parameterized==0.9.0",
    "pandas==2.2.3",
    "scipy==1.15.3",
]
doc = [
    "ansys-sphinx-theme==1.4.4",
    "build==1.2.2.post1",
    "jupyterlab==4.4.2",
    "jupytext==1.17.1",
    "jupyter-server==2.16.0",
    "libcst==1.8.0",
    "myst-parser==4.0.1",
    "nbsphinx==0.9.7",
    "numpydoc==1.8.0",
    "nbconvert==7.16.6",
    "scipy==1.15.3",
    "sphinx==7.4.7",
    "sphinx-design==0.6.1",
    "sphinx-jinja==2.0.2",
    "sphinx-copybutton==0.5.2",
    "pandas==2.2.3",
    "matplotlib==3.10.3",
    "sphinxcontrib-jquery==4.1",
    "sphinxcontrib-mermaid==1.0.0",
    "toml==0.10.2",
]
# NOTE: Pin marshmallow to avoid safety failure, see https://github.com/ansys/actions/pull/780
vulnerabilities = [
    "bandit[toml]==1.8.3",
    "safety==3.3.0",
    "marshmallow==3.26.1",
]

[tool.flit.module]
name = "ansys.stk.core"

[project.urls]
discussions = "https://github.com/ansys/pystk/discussions"
documentation = "https://stk.docs.pyansys.com/"
homepage = "https://www.ansys.com/products/missions/ansys-stk"
issues = "https://github.com/ansys/pystk/issues"
source = "https://github.com/ansys/pystk"
changelog = "https://github.com/ansys/pystk/blob/main/doc/source/changelog.rst"

[tool.ruff]
line-length = 120
extend-exclude = [
    "src/ansys/stk/core/internal/*.py",
    "tests/**/*.py",
    "doc/source/conf.py",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle, see https://beta.ruff.rs/docs/rules/#pycodestyle-e-w
    "D",     # pydocstyle, see https://beta.ruff.rs/docs/rules/#pydocstyle-d
    "F",     # pyflakes, see https://beta.ruff.rs/docs/rules/#pyflakes-f
    "PYI",   # flake8-pyi, see https://docs.astral.sh/ruff/rules/#flake8-pyi-pyi 
    "I",    # isort, see https://beta.ruff.rs/docs/rules/#isort-i
    "N",    # pep8-naming, see https://beta.ruff.rs/docs/rules/#pep8-naming-n
    "PTH",  # flake8-use-pathlib, https://beta.ruff.rs/docs/rules/#flake8-use-pathlib-pth
    "TD",    # flake8-todos, https://docs.astral.sh/ruff/rules/#flake8-todos-td
]
ignore = [
    "E501",  # Line too long. Ignoring this so "ruff.formatter" manages line length.
    "E743",  # Ambiguous function name. N802 and Python naming restrictions ensure unambiguous names.
    "D204",  # One blank line required after class docstring
    "D212",  # Multi-line docstring summary should start at the first line
    "D400",  # First line should end with a period
    "F821",  # Undefined name. PyFlakes can not handle forward reference annotations. Using flake8-pyi instead.
    "TD002", # Missing author in TODOs comment
]

[tool.ruff.lint.pydocstyle]
# Settings: https://docs.astral.sh/ruff/settings/#lintpydocstyle
convention = "numpy"

# [tool.ruff.format]
# quote-style = "double"
# indent-style = "tab"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["ansys"]

[tool.ruff.lint.pep8-naming]
# Ignore overridden ast/libcst functions
extend-ignore-names = ["visit_*", "leave_*"]

# TODO: the following configuration has no effect, see issue
# https://github.com/codespell-project/codespell/issues/2375
# At the moment, all codespell configuration is done in the pre-commit file.
# Run: `pre-commit run codespell --all-files --show-diff-on-failure` to recreate
# the conditions under which codespell runs during CI/CD.
# [tool.codespell]
# skip = './src/ansys/stk/core/internal,./tests,./doc/_build,./doc/styles'
# ignore-words = "./doc/styles/config/vocabularies/ANSYS/accept.txt"

[tool.coverage.paths]
source = [
    "src",
]

[tool.coverage.run]
branch = true
source = ["src/ansys/stk/core"]
relative_files = true

[tool.coverage.report]
show_missing = true

[tool.towncrier]
package = "ansys.stk.core"
directory = "doc/source/changelog"
filename = "doc/source/changelog.rst"
start_string = ".. towncrier release notes start\n"
template = "doc/source/changelog/template"
title_format = "`{version} <https://github.com/ansys/pystk/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/pystk/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true

[tool.bandit]
skips = [
    "B405", # Using xml.etree.ElementTree to parse untrusted XML data is known to be vulnerable to XML attacks.
    "B406", # Using escape to parse untrusted XML data is known to be vulnerable to XML attacks.
    "B314", # Using xml.etree.ElementTree.parse to parse untrusted XML data is known to be vulnerable to XML attacks.
]
